kubernetes/cluster/extras/guacamole/guacamole.yaml
# Service: guacamole
# Ingress: rdp.brhd.io
# Label: app.kubernetes.io/name: guacamole
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: extras
  labels:
    app.kubernetes.io/name: guacamole
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: guacamole
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: extras
  labels:
    app.kubernetes.io/name: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: extras
      labels:
        app.kubernetes.io/name: guacamole
    spec:
      restartPolicy: Always
      containers:
        - name: guacamole
          image: guacamole/guacamole:1.5.3
          resources:
            requests:
              cpu: 50m
              memory: 250Mi
            limits:
              memory: 500Mi
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      nodeSelector:
        beta.kubernetes.io/arch: amd64
