kubernetes/cluster/extras/guacamole/guacd.yaml
# Service: guacd
# Label: app.kubernetes.io/name: guacd
---
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: extras
  labels:
    app.kubernetes.io/name: guacd
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 4822
      targetPort: 4822
  selector:
    app.kubernetes.io/name: guacd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: extras
  labels:
    app.kubernetes.io/name: guacd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: guacd
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: extras
      labels:
        app.kubernetes.io/name: guacd
    spec:
      restartPolicy: Always
      containers:
        - name: guacd
          image: guacamole/guacd:1.5.3
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              memory: 200Mi
          ports:
            - containerPort: 4822
          readinessProbe:
            tcpSocket:
              port: 4822
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 4822
            initialDelaySeconds: 15
            periodSeconds: 20
      nodeSelector:
        beta.kubernetes.io/arch: amd64
