kubernetes/cluster/extras/guacamole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: extras
  labels:
    app.kubernetes.io/name: guacamole
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: rdp.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: guacamole
                port:
                  number: 8080
  tls:
    - hosts:
        - rdp.brhd.io
